# VAL3000

./: .gitignore  LICENSE  README.md
firmware/: README.md
firmware/MorningRope/: MorningRope.ino  espui_settings.h  memory.h  motor_control.h
firmware/Simple/: Simple.ino
firmware/VAL3000-api/: README.md  espui_settings.h  motor_control.h  reset_button.h  ropener-api.ino
firmware/VAL3000-dust-boot/: VAL3000-dust-boot.ino  memory.h
firmware/VAL3000-esphome/: VAL3000-esphome.yml
firmware/VAL3000-matter/: motor_control.h  ropener-matter.ino
firmware/VAL3000-matter-arduino/: memory.h
firmware/VAL3000-matter-esp-idf/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/VAL3000-matter-esp-idf/components/TMCSTEPPER/: CMakeLists.txt  TMCStepper.h
firmware/VAL3000-matter-esp-idf/components/TMCSTEPPER/source/: CHOPCONF.cpp  DRV_STATUS.cpp  GCONF.cpp  IHOLD_IRUN.cpp  PWMCONF.cpp  TMC2130_bitfields.h  TMC2208Stepper.cpp  TMC2209Stepper.cpp  TMC2209_bitfields.h  TMC5130_bitfields.h  TMC5160_bitfields.h  TMCStepper.cpp
firmware/VAL3000-matter-esp-idf/components/curtain_motor/: CMakeLists.txt  curtain_motor.cpp
firmware/VAL3000-matter-esp-idf/main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  app_priv.h  idf_component.yml
firmware/VAL3000-simple/: README.md  VAL3000-simple.ino
firmware/dev-buttons/: dev-buttons.ino
hardware/Libraries/BSMD1812-200-30V/: BSMD1812-200-30V.kicad_sym
hardware/PCB/: VAL3000.kicad_pcb  VAL3000.kicad_prl  VAL3000.kicad_pro  VAL3000.kicad_sch  _autosave-VAL3000.kicad_pcb  fp-info-cache
(+2 files in other folders)
